--- a/register.html
+++ b/register.html
@@ -10,20 +10,28 @@
     <div class="container" id="container">
         <h2>User Registration</h2>
         <form id="registrationForm">
-            <input type="text" id="name" placeholder="Name" required>
-            <input type="tel" id="phone" placeholder="Phone Number" required>
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
-
-            <!-- New input field for referral code -->
-            <input type="text" id="referralCode" placeholder="Referral Code (Optional)">
-
+            <div class="input-group">
+                <input type="text" id="name" placeholder="Name" required>
+            </div>
+            <div class="input-group">
+                <input type="tel" id="phone" placeholder="Phone Number" required>
+            </div>
+            <div class="input-group">
+                <input type="email" id="email" placeholder="Email" required>
+            </div>
+            <div class="input-group">
+                <input type="password" id="password" placeholder="Password" required>
+            </div>
+            <div class="input-group">
+                <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+            </div>
+            <div class="input-group">
+                <input type="text" id="referralCode" placeholder="Referral Code (Optional)">
+            </div>
             <button type="submit">Register</button>
         </form>
         <p id="message"></p>
 
-        <!-- Loading Spinner and Blur Effect -->
         <div id="loadingSpinner" class="spinner">
             <svg viewBox="0 0 50 50">
                 <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
@@ -31,7 +39,6 @@
         </div>
         <div id="blurOverlay" class="blur-overlay"></div>
 
-        <!-- Sign In button -->
         <p>Already have an account? <a href="login.html">Log In</a></p>
     </div>
     <script src="reg.js"></script>
