--- a/withdraw.html
+++ b/withdraw.html
@@ -262,7 +262,7 @@
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
             <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder;"> 500</span>Coins</div>
-            <div class="child-info">Conversion Rate: 1 Coin =<span style="font-weight: bolder;"> $0.01</span></div>
+            <div class="child-info">Conversion Rate: 10 Coin = <span style="font-weight: bolder;">₹01</span></div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
