--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         
     </div>
-
+    <script src="//code.tidio.co/y52anw0agxaj9ehjys9kl4woyzquvmsn.js" async></script>
     <script src="aleart.js"></script>
     <script src="menu.js"></script> <!-- Add this script tag for the menu toggle script -->
     
