--- a/Dashboard.html
+++ b/Dashboard.html
@@ -74,7 +74,7 @@
             transform: translate(-50%, -50%);
             width: 80%;
             max-width: 500px;
-            background-color: white;
+            background-color: rgb(0, 0, 0);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
             display: none;
@@ -95,8 +95,8 @@
             background: #ff5c5c;
             border: none;
             border-radius: 50%;
-            width: 24px;
-            height: 24px;
+            width: 32px;
+            height: 32px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -107,8 +107,8 @@
 
         #ad-close svg {
             fill: white;
-            width: 22px;
-            height: 22px;
+            width: 32px;
+            height: 32px;
         }
 
         #timer {
@@ -119,7 +119,7 @@
             color: white;
             border-radius: 12px;
             padding: 4px 8px;
-            font-size: 12px;
+            font-size: 18px;
         }
 
         @keyframes popUp {
