--- a/Dashboard.html
+++ b/Dashboard.html
@@ -116,7 +116,7 @@
             top: 8px;
             right: 40px;
             background: #333;
-            color: white;
+            color: rgb(251, 255, 0);
             border-radius: 12px;
             padding: 4px 8px;
             font-size: 25px;
