--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="titleLogo.jpg">
     <meta name="twitter:title" content="Click & Win">
     <meta name="twitter:description" content="Join this FREE platform and make MONEY!">
     <meta name="twitter:image" content="titleLogo.png">
