--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="titleLogo.jpg">
     <meta name="twitter:title" content="Click & Win">
     <meta name="twitter:description" content="Join this FREE platform and make MONEY!">
-    <meta name="twitter:image" content="titleLogo.png">
+    <meta name="twitter:image" content="titleLogo.jpg">
 
 </head>
 
