--- a/adminPage.html
+++ b/adminPage.html
@@ -54,10 +54,50 @@
         .hidden {
             display: none;
         }
+
+        /* Navbar styles */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            padding: 10px;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .navbar .title {
+            float: left;
+            font-size: 20px;
+            color: white;
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
+        @media screen and (max-width: 600px) {
+            .navbar a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
     </style>
 </head>
 
 <body>
+
+
     <div class="container">
         <form id="loginForm" onsubmit="loginAdmin(event)">
             <h2>Admin Login</h2>
@@ -72,6 +112,11 @@
             <button type="submit">Login</button>
         </form>
         <div id="dashboard" class="hidden">
+            <div class="navbar">
+                <div class="title">Admin Dashboard</div>
+                <a id="linkClicks">Link Clicks Today: Loading...</a>
+                <a id="totalUsers">Total Users: Loading...</a>
+            </div>
             <h2>Admin Dashboard</h2>
             <form id="linkForm" onsubmit="updateLinks(event)">
                 <h3>Update Affiliate Links</h3>
@@ -151,7 +196,7 @@
             const password = document.getElementById('adminPassword').value;
 
             const spinner = document.getElementById('spinner');
-            spinner.style.display = 'block'; // Show spinner
+            spinner.style.display = 'block'; 
 
             try {
                 const response = await fetch(`${apiUrl}/admin/login`, {
@@ -166,19 +211,35 @@
 
                 if (response.ok) {
                     sessionStorage.setItem('adminLoggedIn', true);
-                    spinner.style.display = 'none'; // Hide spinner after login attempt
+                    spinner.style.display = 'none';
                     document.getElementById('loginForm').classList.add('hidden');
                     document.getElementById('dashboard').classList.remove('hidden');
+                    fetchStatistics();
                 } else {
-                    spinner.style.display = 'none'; // Hide spinner after login attempt
+                    spinner.style.display = 'none'; 
                     alert(data.message);
                 }
             } catch (error) {
                 alert('An error occurred while logging in.');
             } finally {
-                spinner.style.display = 'none'; // Hide spinner after login attempt
+                spinner.style.display = 'none';
             }
         }
+
+        //new coding today
+        async function fetchStatistics() {
+            try {
+                const response = await fetch(`${apiUrl}/statistics`);
+                const data = await response.json();
+
+                document.getElementById('linkClicks').textContent = `Link Clicks Today: ${data.linkClicksToday}`;
+                document.getElementById('totalUsers').textContent = `Total Users: ${data.totalUsers}`;
+            } catch (error) {
+                console.error('Error fetching statistics:', error);
+                alert('Failed to fetch statistics.');
+            }
+        }
+
 
         async function updateLinks(event) {
             event.preventDefault();
@@ -223,7 +284,7 @@
             } catch (error) {
                 alert('An error occurred while updating links.');
             } finally {
-                spinner.style.display = 'none'; // Hide spinner after update attempt
+                spinner.style.display = 'none'; 
             }
         }
 
