--- a/adminPage.html
+++ b/adminPage.html
@@ -62,7 +62,7 @@
             padding: 10px;
         }
 
-        .navbar a {
+        .navbar span{
             float: left;
             display: block;
             color: white;
@@ -72,7 +72,7 @@
             font-size: 17px;
         }
 
-        .navbar a:hover {
+        .navbar span:hover {
             background-color: #ddd;
             color: black;
         }
@@ -86,7 +86,7 @@
         }
 
         @media screen and (max-width: 600px) {
-            .navbar a {
+            .navbar span {
                 float: none;
                 display: block;
                 text-align: left;
@@ -114,8 +114,8 @@
         <div id="dashboard" class="hidden">
             <div class="navbar">
                 <div class="title">Admin Dashboard</div>
-                <a id="linkClicks">Link Clicks Today: Loading...</a>
-                <a id="totalUsers">Total Users: Loading...</a>
+                <span id="linkClicks"></span>
+                <span id="totalUsers"></span>
             </div>
             <h2>Admin Dashboard</h2>
             <form id="linkForm" onsubmit="updateLinks(event)">
@@ -233,7 +233,9 @@
                 const data = await response.json();
 
                 document.getElementById('linkClicks').textContent = `Link Clicks Today: ${data.linkClicksToday}`;
+                console.log(data.linkClicksToday);
                 document.getElementById('totalUsers').textContent = `Total Users: ${data.totalUsers}`;
+                console.log(data.totalUsers);
             } catch (error) {
                 console.error('Error fetching statistics:', error);
                 alert('Failed to fetch statistics.');
