--- a/adminPage.html
+++ b/adminPage.html
@@ -62,7 +62,7 @@
             padding: 10px;
         }
 
-        .navbar span{
+        .navbar div {
             float: left;
             display: block;
             color: white;
@@ -72,7 +72,7 @@
             font-size: 17px;
         }
 
-        .navbar span:hover {
+        .navbar div:hover {
             background-color: #ddd;
             color: black;
         }
@@ -85,8 +85,15 @@
             margin-left: 10px;
         }
 
+        .holdData{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            column-gap:3vw;
+        }
+
         @media screen and (max-width: 600px) {
-            .navbar span {
+            .navbar div {
                 float: none;
                 display: block;
                 text-align: left;
@@ -113,9 +120,13 @@
         </form>
         <div id="dashboard" class="hidden">
             <div class="navbar">
-                <div class="title">Admin Dashboard</div>
-                <span id="linkClicks"></span>
-                <span id="totalUsers"></span>
+                <div class="title">Our Company History</div>
+
+                <div class="holdData">
+                    <div id="linkClicks">Link Clicks Today: <span id="ClickValue" style="font-weight: bold;"></span> </div>
+                    <div id="totalUsers">Total Users: <span id="UserValue" style="font-weight: bold;"></span> </div>
+                </div>
+                
             </div>
             <h2>Admin Dashboard</h2>
             <form id="linkForm" onsubmit="updateLinks(event)">
@@ -232,9 +243,9 @@
                 const response = await fetch(`${apiUrl}/statistics`);
                 const data = await response.json();
 
-                document.getElementById('linkClicks').textContent = `Link Clicks Today: ${data.linkClicksToday}`;
+                document.getElementById('ClickValue').textContent =data.linkClicksToday;
                 console.log(data.linkClicksToday);
-                document.getElementById('totalUsers').textContent = `Total Users: ${data.totalUsers}`;
+                document.getElementById('UserValue').textContent =data.totalUsers;
                 console.log(data.totalUsers);
             } catch (error) {
                 console.error('Error fetching statistics:', error);
