--- a/index.html
+++ b/index.html
@@ -23,16 +23,66 @@
     <meta name="twitter:description" content="Join this FREE platform and make MONEY!">
     <meta name="twitter:image" content="titleLogo.jpg">
 
+    <style>
+        /* Additional CSS for the popup */
+        .popup img {
+            width: 140%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            animation: slowpop 3s infinite;
+        }
+
+        @keyframes slowpop {
+            0% {
+                opacity: 0.5;
+                transform: scale(1);
+            }
+
+            50% {
+                opacity: 1;
+                transform: scale(1.1);
+            }
+
+            100% {
+                opacity: 0.5;
+                transform: scale(1);
+            }
+        }
+
+        .popup p {
+            text-align: center;
+            font-size: 1rem;
+            margin: 0;
+        }
+
+        .popup {
+            padding: 10px;
+        }
+
+        .popup h2 {
+            margin: 0 0 10px 0;
+            text-align: center;
+        }
+
+        .regis, .closis {
+            display: block;
+            margin: 10px auto;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
     <div class="home_page">
         <div class="popup">
             <button id="close">&times;</button>
-            <h2>This Is A Information</h2>
-            <p>
-                thanks For Visiting Our Website. This Platform makes You RICH Day by Day . So Join This FREE platform & make MONEY
-            </p>
+            <h2>Join Our WhatsApp Group</h2>
+            <p>Scan the QR code below to join our WhatsApp group</p>
+            <a href="https://chat.whatsapp.com/IQiv8Zh88HuIMUwlwNE9ml" target="_blank">
+                <img src="GPScanner.jpg" alt="WhatsApp QR Code">
+            </a>
             <a href="/register.html" class="regis">REGISTER</a>
             <a id="closeClick" href="#" class="closis">Click to Close</a>
         </div>
@@ -46,7 +96,7 @@
                 <ul>
                     <li><a href="/" class="link active">Home</a></li>
                     <li><a href="/adminPage.html" class="link">Admin</a></li>
-                    <li><a href="/tested.html" class="link">tested</a></li>
+                    <li><a href="/tested.html" class="link">Tested</a></li>
                     <li><a href="/about.html" class="link">About</a></li>
                 </ul>
             </div>
@@ -70,7 +120,7 @@
     </div>
     <script src="//code.tidio.co/y52anw0agxaj9ehjys9kl4woyzquvmsn.js" async></script>
     <script src="aleart.js"></script>
-    <script src="menu.js"></script> <!-- Add this script tag for the menu toggle script -->
+    <script src="menu.js"></script>
 </body>
 
 </html>
