--- a/adminPage.html
+++ b/adminPage.html
@@ -93,10 +93,10 @@
         }
 
         @media screen and (max-width: 600px) {
-            .navbar div {
-                float: none;
-                display: block;
-                text-align: left;
+            .navbar{
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     </style>
@@ -120,8 +120,7 @@
         </form>
         <div id="dashboard" class="hidden">
             <div class="navbar">
-                <div class="title">Our Company History</div>
-
+                
                 <div class="holdData">
                     <div id="linkClicks">Link Clicks Today: <span id="ClickValue" style="font-weight: bold;"></span>
                     </div>
