--- a/adminPage.html
+++ b/adminPage.html
@@ -122,9 +122,9 @@
             <div class="navbar">
                 
                 <div class="holdData">
-                    <div id="linkClicks">Link Clicks Today: <span id="ClickValue" style="font-weight: bold;"></span>
+                    <div id="linkClicks">Total Link Clicked : <span id="ClickValue" style="font-weight: bold; color: yellow;"></span>
                     </div>
-                    <div id="totalUsers">Total Users: <span id="UserValue" style="font-weight: bold;"></span> </div>
+                    <div id="totalUsers">Total Users  : <span id="UserValue" style="font-weight: bold; color: yellow;"></span> </div>
                 </div>
 
             </div>
