--- a/Dashboard.html
+++ b/Dashboard.html
@@ -71,6 +71,7 @@
 <body>
     <nav id="nav-bar">
         <div class="welcome-msg">
+            <span style="color:rgb(255, 254, 254); font-weight:550;">👋 </span>
             <span id="username"></span>
         </div>
         <div class="nav-items">
