--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
     <link rel="icon" href="titleLogo.jpg" sizes="64x64" type="image/png">
     <title>Click & Win</title>
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Click & Win">
-    <meta property="og:description" content="Join this FREE platform and make MONEY!">
-    <meta property="og:image" content="titleLogo.jpg">
-    <meta property="og:url" content="https://click-and-win.netlify.app">
-    <meta property="og:type" content="website">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="titleLogo.jpg">
-    <meta name="twitter:title" content="Click & Win">
-    <meta name="twitter:description" content="Join this FREE platform and make MONEY!">
-    <meta name="twitter:image" content="titleLogo.jpg">
+    <meta property="og:title" content="Click-n-Win" />
+    <meta property="og:description" content="Visit & gets Affordable Prizes..." />
+    <meta property="og:image" content="https://click-and-win.netlify.app/titleLogo.jpg" />
+    <meta property="og:url" content="https://click-and-win.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Click-n-Win" />
+  
 
     <style>
         /* Additional CSS for the popup */
