--- a/Dashboard.html
+++ b/Dashboard.html
@@ -75,7 +75,7 @@
             <span id="username"></span>
         </div>
         <div class="nav-items">
-            <img class="user-profile" id="profilePic" src="user-profile.svg" alt="">
+            <img class="user-profile" id="profilePic" src="UserLogo.jpg" alt="">
         </div>
         <div class="coin-info">
             <img class="coin-photos" src="coin.png" alt="">
