--- a/profile.html
+++ b/profile.html
@@ -118,7 +118,7 @@
     </div>
 
     <span class="assistance">
-        <a href="https://chat.whatsapp.com/IQiv8Zh88HuIMUwlwNE9ml"><img style=" filter: brightness(100);" src="https://w0.peakpx.com/wallpaper/544/862/HD-wallpaper-whatsapp-development-brand.jpg" alt=""></a>
+        <a href="https://chat.whatsapp.com/IQiv8Zh88HuIMUwlwNE9ml"><img src="https://w0.peakpx.com/wallpaper/544/862/HD-wallpaper-whatsapp-development-brand.jpg" alt=""></a>
     </span>
 
     <script>
