--- a/profile.html
+++ b/profile.html
@@ -107,8 +107,8 @@
         </div>
         <div class="service-item" id="About">
             
-                <img src="about.png" alt="About">
-                <span class="service-label">About</span>
+                <img src="https://e0.pxfuel.com/wallpapers/316/145/desktop-wallpaper-whatsapp-logo-whatsapp-icon.jpg" alt="What'sAPp">
+                <span class="service-label">Info</span>
             
         </div>
     </section>
@@ -173,6 +173,9 @@
                     });
                     document.getElementById('Orders').addEventListener('click', () => {
                         window.location.href = `orders.html?userId=${userId}`;
+                    });
+                    document.getElementById('About').addEventListener('click', () => {
+                        window.location.href = `https://chat.whatsapp.com/IQiv8Zh88HuIMUwlwNE9ml`;
                     });
 
                 } else {
