--- a/WithdrawAdmin.html
+++ b/WithdrawAdmin.html
@@ -70,7 +70,7 @@
 <body>
     <div id="withdrawal-requests" class="admin-withdrawals"></div>
 
-    <script src="scripts.js"></script>
+    <script src="WithdrawAdmin.js"></script>
 </body>
 
 </html>
