--- a/WithdrawAdmin.html
+++ b/WithdrawAdmin.html
@@ -55,6 +55,7 @@
 
         .withdrawal-card button:hover {
             background-color: #0056b3;
+            transition: scale(115%);
         }
 
         .withdrawal-card button:nth-child(2) {
@@ -63,6 +64,7 @@
 
         .withdrawal-card button:nth-child(2):hover {
             background-color: #c82333;
+            transition: scale(115%);
         }
     </style>
 </head>
