--- a/adminPage.html
+++ b/adminPage.html
@@ -254,7 +254,7 @@
                 document.getElementById('UserValue').textContent = data.totalUsers;
                 console.log(data.totalUsers);
                 document.getElementById('WithdrawStatus').addEventListener('click', () => {
-                    alert("Works on Pending..");
+                    window.location.href='WithdrawAdmin.html';
                 });
             } catch (error) {
                 console.error('Error fetching statistics:', error);
